<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Leadsheets</string>

    <string name="snack_bar_text_item_removed">Song deleted</string>
    <string name="snack_bar_action_undo">UNDO</string>

    <string name="title_activity_detaillist">Performance View</string>
    <string name="title_activity_edit">Edit Song</string>

    <string name="action_settings">Settings</string>
    <string name="action_setlist_order">Setlist</string>
    <string name="action_lock">Lock</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_remove">Remove</string>
    <string name="action_rename">Rename</string>
    <string name="action_done">Done</string>
    <string name="action_remove_ads">Remove ads</string>

    <string name="caption_setlist">Setlist</string>
    <string name="caption_rest">Not on setlist</string>
    <string name="caption_library">Library</string>


    <string name="dialog_new_song">New Song</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remove_project">Do you really want to remove this project?</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_thanks">Thanks for supporting the developer :). The app will now restart.</string>
    <string name="dialog_reset_setlist">Reset Setlist?</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_delete_error">There was a problem deleting the folder.</string>
    <string name="dialog_new_folder">New Project</string>

    <string name="hint_swipe_setlist_item">Swipe right to remove from setlist</string>
    <string name="hint_drag_setlist_item">Long press to drag</string>
    <string name="hint_add_rest_item">Touch to add to setlist</string>

    <string name="action_show_hints">Show help hints again</string>
    <string name="empty_folders_view">Welcome to Leadsheets.\n\nClick the yellow button to add a project.</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4499265558737121/4697313292</string>
    <string name="hint_open_perf_view">Touch to open detailed setlist view</string>
    <string name="caption_projects">Projects</string>
    <string name="empty_setlist_view">Songs created here are saved as text files on your internal storage.\nThe default app folder is called <i>sheets</i>. \n\n<b>Tip</b>:\n Sync that folder with an app like <i>FolderSync</i> to Google Drive/Dropbox to be able to edit your sheets with a real keyboard on your laptop. </string>
    <string name="snackbar_showing_hints_again">Showing help hints again</string>
    <string name="title_activity_help">Help</string>

    <string name="help_text">
        <![CDATA[
        <h4>Concept</h4>
        <p>The general idea of this app is to save your leadsheets as text files. This is a use case that might
        resonate with you if you tend to see leadsheets not as an accurate note-by-note transcriptions of
        a given music piece but rather as a terse abstract which only contains the crucial,
        harder to remember parts.</p>
        <p>You can take a look at my collection of sheets to get an idea what I am talking about:
        https://github.com/jonathanewerner/sheets?files=1</p>
        <p>I also encourage you to check out the <i>Nashville Number System</i>, which I employ most of the time,
        as it really makes it feasible to write leadsheets on your cellphone and allows you to transpose any song to every
        possible key with ease, on the fly.</p>

        <h4>Projects</h4>
        <p>Projects are simply folders saved under the root folder of the app (which is <i>sheets</i> by default).
        They contain songs, which you can order in a setlist. If you need a song in two different projects just
        copy the file (right now you would have to do this with an external file manager - i found
        <i>Solid Explorer</i> to be quite pleasant) - this way changes in a song are always project-specific.</p>

        <h4>Setlists</h4>
        <p>This app deliberately makes the assumption of only one setlist at a given point in time per project in
        order to decrease the complexity of the app.</p>
        <p>You can also get a <i>Library</i> view of your projects songs by clicking the icon in the upper right.
        This might come in handy during rehearsals when you have to access all of the songs alphabetically sorted.</p>
        <p>One important non-obvious point: if you delete songs (either by swiping them right or invoking the context menu
        long-pressing on them), they are not deleted on the filesystem, but rather moved into an <i>.archive</i>-folder,
        so that you can restore them in case the deletion wasn\'t intentional.</p>

        <p>If you have ideas for improvements, do not hesitate and send me a mail. </p>
        <p>If you like this app I would be very happy if you would consider removing the ads
            in order to buy me a virtual beer. ;)</p>
        <p>Cheers, Jonathan.</p>
        ]]>
    </string>
    <string name="action_feedback">Send feedback &amp; ideas</string>
    <string name="action_rate">Rate this app</string>
    <string name="pref_id_folder">pref_folder</string>
    <string name="pref_folder_title">Folder</string>
    <string name="feedback_mail_header">Feedback for Leadsheets</string>
    <string name="action_send_mail">Send mail…</string>
    <string name="dialog_couldnt_rename">Something didn\'t work - couldn\'t rename.</string>
    <string name="dialog_rename_folder_question">Rename Project</string>
    <string name="dialog_rename_song">Rename Song</string>

</resources>
