<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_remove_ads"
        android:orderInCategory="50"
        android:title="@string/action_remove_ads"
        app:showAsAction="never" />
    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_settings"-->
    <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="200"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="250"
        android:title="@string/action_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_hints"
        android:orderInCategory="400"
        android:title="@string/action_show_hints"
        app:showAsAction="never"/>
</menu>
